Added name section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <div class="ver">
+        <div class="hor">
+            <div class="name">
+                <img src="https://avatars3.githubusercontent.com/u/24795158?s=460&u=b2c3f2faf01de476be05ee2926f71309f77676ac&v=4" alt="Profile Picture" class="profilePicture">
+                <h1>Anjaney C Mahajan</h1>
+                <h3>@acmahaja</h3>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
