Added fontawesome icons

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="./style.css">
     <title>acmahaja</title>
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+    <script src="https://use.fontawesome.com/7184b4892a.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
 
 <body>
+
     <div class="hor">
+
         <div class="ver">
             <div class="profile">
                 <img src=" https://avatars3.githubusercontent.com/u/24795158?s=460&u=b2c3f2faf01de476be05ee2926f71309f77676ac&v=4 " alt=" Profile Picture " class=" profilePicture ">
@@ -20,44 +24,40 @@
             </div>
             <div class="apps">
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fa fa-envelope"></i></div>
                     <div class="website">
                         acmahaja@gmail.com
                     </div>
                 </div>
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fab fa-linkedin"></i></div>
                     <div class="website">
-                        acmahaja@gmail.com
-                    </div>
+                        /in/acmahaja </div>
                 </div>
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fab fa-github"></i></div>
                     <div class="website">
-                        acmahaja@gmail.com
-                    </div>
+                        /acmahaja </div>
                 </div>
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fab fa-discord" aria-hidden="true"></i></div>
                     <div class="website">
-                        acmahaja@gmail.com
-                    </div>
+                        acmahaja#0052 </div>
                 </div>
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fab fa-instagram"></i></div>
                     <div class="website">
-                        acmahaja@gmail.com
-                    </div>
+                        @acmahaja </div>
                 </div>
                 <div class="app">
-                    <div class="icon">📧</div>
+                    <div class="icon"><i class="fab fa-twitch"></i></div>
                     <div class="website">
-                        acmahaja@gmail.com
-                    </div>
+                        tv/acmahaja </div>
                 </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
@@ -159,10 +159,8 @@
 <!-- <div class=" app ">
     <div class=" icon ">
         <i class=" fa fa-linkedin-in "></i>
-    </div>
-    <div class=" address ">
-        acmahaja@gmail.com
-    </div>
-</div> -->
-
-!
+                    </div>
+                    <div class=" address ">
+                        acmahaja@gmail.com
+                    </div>
+                </div> -->!
