Added website links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <div class="hor">
         <div class="ver">
             <div class="profile">
@@ -22,33 +21,33 @@
                 <h3 class="font-weight-bold ">@acmahaja</h3>
             </div>
             <div class="apps">
-                <div class="app envelope">
+                <div class="app envelope" onclick="redirect(this)">
                     <div class="icon"><i class="fa fa-envelope"></i></div>
                     <div class="website">
                         acmahaja@gmail.com
                     </div>
                 </div>
-                <div class="app linkedin">
+                <div id="linkedin" class="app linkedin" onclick="redirect(this)">
                     <div class="icon linkedin"><i class="fab fa-linkedin"></i></div>
                     <div class="website">
                         /in/acmahaja </div>
                 </div>
-                <div class="app github">
+                <div class="app github" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-github"></i></div>
                     <div class="website">
                         /acmahaja </div>
                 </div>
-                <div class="app discord">
+                <div class="app discord" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-discord" aria-hidden="true"></i></div>
                     <div class="website">
                         acmahaja#0052 </div>
                 </div>
-                <div class="app instagram">
+                <div class="app instagram" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-instagram"></i></div>
                     <div class="website">
                         @acmahaja </div>
                 </div>
-                <div class="app twitch">
+                <div class="app twitch" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-twitch"></i></div>
                     <div class="website">
                         tv/acmahaja </div>
@@ -56,7 +55,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
