Replaced avatar link with saved png

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hor">
         <div class="ver">
             <div class="profile">
-                <img src=" https://avatars3.githubusercontent.com/u/24795158?s=460&u=b2c3f2faf01de476be05ee2926f71309f77676ac&v=4 " alt=" Profile Picture " class=" profilePicture ">
+                <img src="./images/avatar.png" alt=" Profile Picture " class=" profilePicture ">
                 <h1 class="font-weight-bold ">Anjaney C Mahajan</h1>
                 <h3 class="font-weight-bold ">@acmahaja</h3>
             </div>
