Added tablet view

--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
                 <h1 class="font-weight-bold ">Anjaney C Mahajan</h1>
                 <h3 class="font-weight-bold ">@acmahaja</h3>
             </div>
+
+            <div class="bio">
+
+                <p>
+                    I am a graduate computer engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
+                    middle-income communities
+
+                </p>
+            </div>
             <div class="apps">
-                <div class="app envelope" onclick="redirect(this)">
+                <div class="app envelope" ondclick="redirect(this)">
                     <div class="icon"><i class="fa fa-envelope"></i></div>
                     <div class="website">
                         acmahaja@gmail.com
