Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="Portfolio site for @acmahaja" />
+    <meta property="og:description" content="I am a graduate computer engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
+                    middle-income communities" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta property="og:image" content="./images/avatar.png" />
     <link rel="stylesheet" href="./style.css">
     <title>acmahaja</title>
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
