--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
             </div>
 
             <div class="bio">
-
                 <p>
                     I am a graduate software engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
                     middle-income communities
-
                 </p>
             </div>
             <div class="apps">
@@ -46,11 +44,20 @@
                     <div class="website">
                         acmahaja@gmail.com
                     </div>
+
                 </div>
                 <div id="linkedin" class="app linkedin" onclick="redirect(this)">
                     <div class="icon linkedin"><i class="fab fa-linkedin"></i></div>
                     <div class="website">
-                        /in/acmahaja </div>
+                        /in/acmahaja
+                    </div>
+                    <div class="dropdown" id="linkimgback">
+                        <img class="linkimgprof" src="./images/linkprofile.png" alt="" srcset="">
+                        <div class="cvlink">
+                            <a href="" class="">Download My CV 🔗</a>
+
+                        </div>
+                    </div>
                 </div>
                 <div class="app github" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-github"></i></div>
