Progressed on desktop mode

--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
                     <div class="website">
                         /in/acmahaja
                     </div>
-                    <div class="dropdown" id="linkimgback">
+                    <div class="linkDropdown" id="linkimgback">
                         <img class="linkimgprof" src="./images/linkprofile.png" alt="" srcset="">
                         <div class="cvlink">
                             <a href="" class="">Download My CV 🔗</a>
-
                         </div>
                     </div>
                 </div>
@@ -73,6 +72,9 @@
                     <div class="icon"><i class="fab fa-instagram"></i></div>
                     <div class="website">
                         @acmahaja </div>
+                    <div class="dropdown">
+                        <div id="instagram-feed1" class="instagram_feed">asd</div>
+                    </div>
                 </div>
                 <div class="app twitch" onclick="redirect(this)">
                     <div class="icon"><i class="fab fa-twitch"></i></div>
@@ -83,6 +85,8 @@
         </div>
     </div>
     <script src="./script.js"></script>
+
+
 </body>
 
 </html>
