Added locale meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <meta property="og:image" content="/logo.svg" />
+    <meta property="og:locale" content="en_UK" />
     <link rel="manifest" href="/site.webmanifest">
     <title>acmahaja</title>
   </head>
