Fixed about section tablet and desktop mode

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,9 +13,8 @@
     />
     <style>
       html {
-  scroll-behavior: smooth;
-}
-
+        scroll-behavior: smooth;
+      }
     </style>
   </head>
   <body>
